0.4.15/_sources/api/napari.layers.Vectors.rst
napari.layers.Vectors
=====================

.. currentmodule:: napari.layers

.. autoclass:: Vectors
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Vectors.as_layer_data_tuple
   
   
      ~Vectors.bind_key
   
   
      ~Vectors.block_update_properties
   
   
      ~Vectors.click_plane_from_click_data
   
   
      ~Vectors.create
   
   
      ~Vectors.data_to_world
   
   
      ~Vectors.get_ray_intersections
   
   
      ~Vectors.get_status
   
   
      ~Vectors.get_value
   
   
      ~Vectors.projected_distance_from_mouse_drag
   
   
      ~Vectors.refresh
   
   
      ~Vectors.refresh_colors
   
   
      ~Vectors.save
   
   
      ~Vectors.set_view_slice
   
   
      ~Vectors.world_to_data
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Vectors.affine
      ~Vectors.blending
      ~Vectors.class_keymap
      ~Vectors.cursor
      ~Vectors.cursor_size
      ~Vectors.data
      ~Vectors.edge_color
      ~Vectors.edge_color_cycle
      ~Vectors.edge_color_mode
      ~Vectors.edge_colormap
      ~Vectors.edge_contrast_limits
      ~Vectors.edge_width
      ~Vectors.editable
      ~Vectors.experimental_clipping_planes
      ~Vectors.extent
      ~Vectors.feature_defaults
      ~Vectors.features
      ~Vectors.help
      ~Vectors.interactive
      ~Vectors.length
      ~Vectors.loaded
      ~Vectors.metadata
      ~Vectors.name
      ~Vectors.ndim
      ~Vectors.opacity
      ~Vectors.out_of_slice_display
      ~Vectors.properties
      ~Vectors.property_choices
      ~Vectors.rotate
      ~Vectors.scale
      ~Vectors.shear
      ~Vectors.source
      ~Vectors.thumbnail
      ~Vectors.translate
      ~Vectors.translate_grid
      ~Vectors.visible
      ~Vectors.mouse_move_callbacks
      ~Vectors.mouse_wheel_callbacks
      ~Vectors.mouse_drag_callbacks
      ~Vectors.mouse_double_click_callbacks
   
   

   .. rubric:: Details